<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/backgoundPass"
    android:orientation="vertical">

    <TextView
        android:layout_width="179dp"
        android:layout_height="35dp"
        android:fontFamily="@font/allerta"
        android:text="@string/lblPinTitle"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <RadioButton
        android:id="@+id/rbtnPin1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <RadioButton
        android:id="@+id/rbtnPin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/rbtnPin3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/rbtnPin1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <RadioButton
        android:id="@+id/rbtnPin3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/rbtnPin4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/rbtnPin2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <RadioButton
        android:id="@+id/rbtnPin4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <!-- Row 1 -->

    <Button
        android:id="@+id/btnPin2"
        style="@style/button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/a2Btn2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <Button
        android:id="@+id/btnPin0"
        android:layout_width="80dp"
        android:layout_height="80dp"
        style="@style/button"
        android:text="@string/a2Btn0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97"
        app:layout_constraintHorizontal_bias="0.5"/>

    <Button
        android:id="@+id/btnPin8"
        android:layout_width="80dp"
        android:layout_height="80dp"
        style="@style/button"
        android:text="@string/a2Btn8"
        app:layout_constraintBottom_toTopOf="@id/btnPin0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnPin5"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.5"/>


    <Button
        android:id="@+id/btnPin5"
        style="@style/button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/a2Btn5"
        app:layout_constraintBottom_toTopOf="@id/btnPin8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnPin2" />




    <Button
        android:id="@+id/btnPin1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/a2Btn1"
        style="@style/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnPin2"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <Button
        android:id="@+id/btnPin3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        style="@style/button"
        android:text="@string/a2Btn3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnPin2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintVertical_bias="0.35" />

    <!-- Row 2 -->

    <Button
        android:id="@+id/btnPin4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        style="@style/button"
        android:text="@string/a2Btn4"
        app:layout_constraintBottom_toTopOf="@id/btnPin7"
        app:layout_constraintEnd_toStartOf="@id/btnPin5"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnPin1" />



    <Button
        android:id="@+id/btnPin6"
        android:layout_width="80dp"
        android:layout_height="80dp"
        style="@style/button"
        android:text="@string/a2Btn6"
        app:layout_constraintBottom_toTopOf="@id/btnPin9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnPin5"
        app:layout_constraintTop_toBottomOf="@id/btnPin3"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintVertical_bias="0.5"/>

    <!-- Row 3 -->

    <Button
        android:id="@+id/btnPin7"
        android:layout_width="80dp"
        android:layout_height="80dp"
        style="@style/button"
        android:text="@string/a2Btn7"
        app:layout_constraintBottom_toTopOf="@id/btnPin0"
        app:layout_constraintEnd_toStartOf="@id/btnPin8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnPin4"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.7"/>



    <Button
        android:id="@+id/btnPin9"
        android:layout_width="80dp"
        android:layout_height="80dp"
        style="@style/button"
        android:text="@string/a2Btn9"
        app:layout_constraintBottom_toTopOf="@id/btnPin0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnPin8"
        app:layout_constraintTop_toBottomOf="@id/btnPin6"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.3"/>


    <!-- Row 4 -->

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/btnPinB"
        android:layout_width="50dp"
        android:layout_height="50dp"
        style="@style/button"
        android:contentDescription="@string/a2BtnB"
        app:srcCompat="@drawable/ic_arrow_back_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnPin0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.935"
        app:layout_constraintHorizontal_bias="0.4"/>

</android.support.constraint.ConstraintLayout>